--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "DOBBY IS AI",
+  "name": "prime is ai",
   "description": "This is a whatsapp bot built with nodejs and baileys with MD support.",
   "keywords": [
     "bot",
